--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-UA-Compatibility" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Brice Nyiringabo</title>
-    <link rel="stylesheet" href="styles\home.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
