--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="MainImage">
-            <img src="images\mineapolis city.webp" alt="Brice Nyiringabo" width="281" height = "400" class="Image"> 
+            <img src="BricePortfolio\images\mineapolis city.webp" alt="Brice Nyiringabo" width="281" height = "400" class="Image"> 
             <p> <i><cite>Open to relocation | Based in Minnesota</cite></i></p> 
         </div>
 
