--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <nav class="nav-menu">
             <ul class="nav-menu-ul">
                 <li><a href="">Home</a></li>
-                <li><a href="AboutMe.html">About Me</a></li>
-                <li><a href="Services.html">Service</a></li> 
-                <li><a href="Projects.html">MyProjects</a></li> 
-                <li><a href="Resume.html">Resume</a></li>
-                <li><a href="Blogs.html">Blogs</a></li>
-                <li><a href="Contact.html">Contact</a></li>    
+                <li><a href="BricePortfolio\AboutMe.html">About Me</a></li>
+                <li><a href="BricePortfolio\Services.html">Service</a></li> 
+                <li><a href="BricePortfolio\Projects.html">MyProjects</a></li> 
+                <li><a href="BricePortfolio\Resume.html">Resume</a></li>
+                <li><a href="BricePortfolio\Blogs.html">Blogs</a></li>
+                <li><a href="BricePortfolio\Contact.html">Contact</a></li>    
             </ul>
         </nav>
     </header>
