--- a/BricePortfolio/AboutMe.html
+++ b/BricePortfolio/AboutMe.html
@@ -19,11 +19,11 @@
 
     <p>
         <p><b>Make the world a better place</b></p>
-        As a developer, my number one goal is to make an impact. If I always want to make something that save us time and increases our productivity.
+        As a developer, I want to make an impact. My goal is always to make something that saves us time and can increase our productivity.
     </p>    
 
     <p class = "checkmyprojects@aboutme">
-        <b>coding is my passion</b> I have tried many technologies but to my interest software development stands out. I am an aspiring full stack developer. My latest project was an E-Commerce Full-Stack web application. I use ASP.Net but am learning a new Framework called NopeCommernce. I have used different database such SQL, MySQL etc... 
+        <b>coding is my passion</b> I have explored many technologies, but my interest in software development stands out. I am an aspiring full-stack developer. My latest project was a full-stack e-commerce web application. I primarily use ASP.NET but am currently learning a new framework called NopCommerce. I have worked with various databases, including SQL and MySQL...
         <b><a href="Projects.html" class="checkmyprojectlink">Check my Projects</a></b>
     </p>
 
@@ -39,8 +39,8 @@
 
     <p>
         <p><b>Money</b></p>    
-        My purpose as a man is beyond making money. Relationships with friends, Family and society at large, thing like Love is true value. But on the other hand, The monitary system was created by us. It's not the only way but as for now it's the chosen methord. I believe money simplifies life to an extent but no one should make money his end goal . we are all here for a greater purpose.   
-        Financial success matters. Every Human being should work for self and community. I need money to implement and invest in my ideas that can make a difference.
+        My purpose as a man is beyond making money. Relationships with friends, Family and society at large, thing like Love is true value. But on the other hand, The monitary system was created by us. It's not the only way but as for now it's the chosen way. I believe money simplifies life to an extent but no one should make money his end goal . we are all here for a greater purpose.   
+        Financial success matters. Every Human being should work for self and community. Taxes should be used to implement and invest in ideas that can make a difference.
     </p>
  
     
