--- a/BricePortfolio/AboutMe.html
+++ b/BricePortfolio/AboutMe.html
@@ -40,7 +40,7 @@
     <p>
         <p><b>Money</b></p>    
         My purpose as a man is beyond making money. Relationships with friends, Family and society at large, thing like Love is true value. But on the other hand, The monitary system was created by us. It's not the only way but as for now it's the chosen way. I believe money simplifies life to an extent but no one should make money his end goal . we are all here for a greater purpose.   
-        Financial success matters. Every Human being should work for self and community. Taxes should be invested and useded to implement real ideas that can make a difference.
+        Financial success matters. Every Human being should work for self and community. Taxes should be invested and used to implement real ideas that can make a difference.
     </p>
  
     
