--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
                 </p>
             </div>
 
-            <div class="MainTextBottom">
-                <button onclick="alert('Button Clicked!')">Hire Me</button>
-                <button onclick="alert('Button Clicked!')">LatestWorks</button>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/brice-nyiringabo/" target="_blank" class="social-button">
+                    <img src="icons8-linkedin-48.png" alt="LinkedIn" class="social-icon"> LinkedIn
+                </a>
+                <a href="https://github.com/Brice-Nyiringabo" target="_blank" class="social-button">
+                    <img src="images\icons8-github-30.png" alt="GitHub" class="social-icon"> GitHub
+                </a>
             </div>
                         
 
