--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="MainTextMiddle">
                 <p class = "text">
-                    Whether you're a company, recruiter, or an individual seeking tech artistry, I have the potential, curiosity, skills, and work ethic you're looking for. Let's connect! I am a software developer who creates apps and websites both for fun. My passion for technology runs deep. It is not hard to tell—this is my dream. Feel free to reach out, and let's discuss how I can contribute to your projects 
+                    Whether you're a company, recruiter, or an individual seeking tech artistry, I have the potential, curiosity, skills, and work ethic you're looking for. Let's connect! I am a software developer who creates apps and websites as a hobby. My passion for technology runs deep. It is not hard to tell—this is my dream. Feel free to reach out, and let's discuss how I can contribute to your projects 
                 </p>
             </div>
 
